--- a/Demo.AutoTest.Language/Language.resx
+++ b/Demo.AutoTest.Language/Language.resx
@@ -132,8 +132,8 @@
   <data name="Help" xml:space="preserve">
     <value>帮助</value>
   </data>
-  <data name="拉曼自动测试软件" xml:space="preserve">
-    <value>UV8000超瞬态光谱仪</value>
+  <data name="样例自动测试软件" xml:space="preserve">
+    <value>样例自动测试软件</value>
   </data>
   <data name="测试项" xml:space="preserve">
     <value>测试项</value>
